modif edit-attraction

--- a/client(en cours)/src/styles/index.scss
+++ b/client(en cours)/src/styles/index.scss
@@ -8,3 +8,5 @@
 @import './components/header';
 @import './components/formulaire';
 @import './components/attractionCard';
+// @import './components/editAttractionCard';
+@import './components/adminFormulaire';
