--- a/client(en cours)/src/styles/index.scss
+++ b/client(en cours)/src/styles/index.scss
@@ -4,9 +4,11 @@
 @import './pages/home';
 @import './pages/reservations';
 @import './pages/connexion';
+@import './pages/adminReservations';
 
 @import './components/header';
 @import './components/formulaire';
 @import './components/attractionCard';
 // @import './components/editAttractionCard';
 @import './components/adminFormulaire';
+@import './components/getReservations';
